--- a/public/index.html
+++ b/public/index.html
@@ -3,101 +3,203 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College Scholarship & Programs Platform</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>ScholarLens - Find Your Perfect Scholarship</title>
+    <!-- Bootstrap 5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style-modern.css">
 </head>
 <body>
-    <nav class="navbar">
+    <!-- Modern Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-modern sticky-top">
         <div class="container">
-            <div class="nav-brand">
-                <h1>🎓 ScholarMatch</h1>
+            <a class="navbar-brand brand-logo" href="index.html">
+                <i class="fas fa-graduation-cap"></i> ScholarLens
+            </a>
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="scholarships.html">Scholarships</a></li>
+                    <li class="nav-item"><a class="nav-link" href="programs.html">Programs</a></li>
+                    <li class="nav-item"><a class="btn btn-gradient ms-2" href="login.html">Login</a></li>
+                </ul>
             </div>
-            <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="scholarships.html">Scholarships</a></li>
-                <li><a href="programs.html">Programs</a></li>
-                <li><a href="login.html" class="btn-primary">Login</a></li>
-            </ul>
         </div>
     </nav>
 
-    <section class="hero">
+    <!-- Hero Section with Modern Design -->
+    <section class="hero-modern">
         <div class="container">
-            <div class="hero-content">
-                <h1 class="hero-title">Discover Your Perfect Scholarship & Program</h1>
-                <p class="hero-subtitle">AI-powered platform to match you with the best opportunities based on your profile</p>
-                <div class="hero-buttons">
-                    <a href="register.html" class="btn btn-primary btn-lg">Get Started</a>
-                    <a href="scholarships.html" class="btn btn-secondary btn-lg">Browse Scholarships</a>
+            <div class="row align-items-center min-vh">
+                <div class="col-lg-6 hero-content">
+                    <h1 class="display-3 fw-bold mb-4 text-white">
+                        Discover Your Perfect Scholarship
+                    </h1>
+                    <p class="lead mb-4 text-white">
+                        AI-powered platform connecting students with scholarships and programs tailored to their profile, skills, and dreams.
+                    </p>
+                    <div class="d-flex gap-3 flex-wrap">
+                        <a href="register.html" class="btn btn-gradient btn-lg px-5">
+                            <i class="fas fa-rocket me-2"></i>Get Started
+                        </a>
+                        <a href="scholarships.html" class="btn btn-white btn-lg px-5">
+                            <i class="fas fa-search me-2"></i>Explore Now
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-6 text-center">
+                    <div class="hero-illustration">
+                        <i class="fas fa-book-open"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="blob blob-1"></div>
+        <div class="blob blob-2"></div>
+    </section>
+
+    <!-- Stats Section -->
+    <section class="stats-section py-5">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <div class="stat-item">
+                        <h3 class="stat-number text-gradient">500+</h3>
+                        <p class="stat-label">Scholarships</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="stat-item">
+                        <h3 class="stat-number text-gradient">300+</h3>
+                        <p class="stat-label">Programs</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="stat-item">
+                        <h3 class="stat-number text-gradient">10K+</h3>
+                        <p class="stat-label">Students</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="features">
+    <!-- Features Section -->
+    <section class="features-modern py-5">
         <div class="container">
-            <h2 class="section-title">Why Choose ScholarMatch?</h2>
-            <div class="features-grid">
-                <div class="feature-card">
-                    <div class="feature-icon">🎯</div>
-                    <h3>Personalized Matching</h3>
-                    <p>Get scholarships and programs tailored to your profile, skills, and interests</p>
+            <h2 class="section-title text-center mb-5">Why Choose ScholarLens?</h2>
+            <div class="row g-4">
+                <div class="col-md-6 col-lg-3">
+                    <div class="feature-card-modern">
+                        <div class="feature-icon-bg gradient-purple">
+                            <i class="fas fa-bullseye"></i>
+                        </div>
+                        <h5 class="mt-3 fw-bold">Smart Matching</h5>
+                        <p class="text-muted small">Personalized recommendations based on your profile and interests</p>
+                    </div>
                 </div>
-                <div class="feature-card">
-                    <div class="feature-icon">⏰</div>
-                    <h3>Deadline Alerts</h3>
-                    <p>Never miss an opportunity with smart deadline sorting and notifications</p>
+                <div class="col-md-6 col-lg-3">
+                    <div class="feature-card-modern">
+                        <div class="feature-icon-bg gradient-blue">
+                            <i class="fas fa-bell"></i>
+                        </div>
+                        <h5 class="mt-3 fw-bold">Smart Alerts</h5>
+                        <p class="text-muted small">Never miss deadlines with instant notifications</p>
+                    </div>
                 </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🤖</div>
-                    <h3>AI Chatbot</h3>
-                    <p>Get instant answers to your questions about scholarships and programs</p>
+                <div class="col-md-6 col-lg-3">
+                    <div class="feature-card-modern">
+                        <div class="feature-icon-bg gradient-pink">
+                            <i class="fas fa-robot"></i>
+                        </div>
+                        <h5 class="mt-3 fw-bold">AI Chatbot</h5>
+                        <p class="text-muted small">Get instant answers to your scholarship questions</p>
+                    </div>
                 </div>
-                <div class="feature-card">
-                    <div class="feature-icon">📊</div>
-                    <h3>Easy Management</h3>
-                    <p>Admin panel to add and manage opportunities effortlessly</p>
+                <div class="col-md-6 col-lg-3">
+                    <div class="feature-card-modern">
+                        <div class="feature-icon-bg gradient-green">
+                            <i class="fas fa-tachometer-alt"></i>
+                        </div>
+                        <h5 class="mt-3 fw-bold">Easy Dashboard</h5>
+                        <p class="text-muted small">Manage all opportunities in one place</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="cta">
-        <div class="container">
-            <h2>Ready to Find Your Opportunity?</h2>
-            <p>Join hundreds of students discovering scholarships and programs</p>
-            <a href="register.html" class="btn btn-primary btn-lg">Create Account</a>
+    <!-- CTA Section -->
+    <section class="cta-modern py-5 bg-gradient">
+        <div class="container text-center">
+            <h2 class="text-white mb-3">Ready to Change Your Future?</h2>
+            <p class="lead text-white mb-4 opacity-90">Join thousands of students discovering scholarships and programs</p>
+            <a href="register.html" class="btn btn-light btn-lg px-5">
+                <i class="fas fa-user-plus me-2"></i>Create Account Free
+            </a>
         </div>
     </section>
 
     <!-- Chatbot Widget -->
     <div id="chatbot-widget">
-        <button id="chatbot-toggle" class="chatbot-toggle">
-            💬
+        <button id="chatbot-toggle" class="chatbot-toggle btn-floating">
+            <i class="fas fa-comments"></i>
         </button>
         <div id="chatbot-container" class="chatbot-container" style="display: none;">
             <div class="chatbot-header">
-                <h4>ScholarMatch Assistant</h4>
-                <button id="chatbot-close">×</button>
+                <h5 class="mb-0"><i class="fas fa-sparkles me-2"></i>ScholarLens AI</h5>
+                <button id="chatbot-close" class="btn-close btn-close-white"></button>
             </div>
             <div id="chatbot-messages" class="chatbot-messages">
                 <div class="bot-message">
-                    <p>Hi! I'm here to help you with any questions about scholarships and programs. How can I assist you today?</p>
+                    <p>Hi! 👋 I'm your scholarship assistant. Ask me anything about scholarships or programs!</p>
                 </div>
             </div>
             <div class="chatbot-input">
-                <input type="text" id="chatbot-input-field" placeholder="Ask me anything...">
-                <button id="chatbot-send">Send</button>
+                <input type="text" id="chatbot-input-field" class="form-control" placeholder="Ask me anything...">
+                <button id="chatbot-send" class="btn btn-gradient ms-2">
+                    <i class="fas fa-paper-plane"></i>
+                </button>
             </div>
         </div>
     </div>
 
-    <footer class="footer">
+    <footer class="footer-modern mt-5">
         <div class="container">
-            <p>&copy; 2026 ScholarMatch Platform. All rights reserved.</p>
+            <div class="row mb-4">
+                <div class="col-md-4">
+                    <h6 class="fw-bold mb-3"><i class="fas fa-graduation-cap me-2 text-gradient"></i>ScholarMatch</h6>
+                    <p class="small text-muted">Empowering students to achieve their dreams through scholarships.</p>
+                </div>
+                <div class="col-md-4">
+                    <h6 class="fw-bold mb-3">Quick Links</h6>
+                    <ul class="list-unstyled small">
+                        <li><a href="scholarships.html" class="text-muted text-decoration-none">Scholarships</a></li>
+                        <li><a href="programs.html" class="text-muted text-decoration-none">Programs</a></li>
+                        <li><a href="login.html" class="text-muted text-decoration-none">Login</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h6 class="fw-bold mb-3">Follow Us</h6>
+                    <div class="d-flex gap-2">
+                        <a href="#" class="text-muted"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="text-muted"><i class="fab fa-linkedin"></i></a>
+                        <a href="#" class="text-muted"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <p class="text-center small text-muted mb-0">&copy; 2026 ScholarLens. All rights reserved.</p>
         </div>
     </footer>
 
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/chatbot.js"></script>
     <script src="js/main.js"></script>
 </body>
