--- a/public/login.html
+++ b/public/login.html
@@ -3,60 +3,178 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - ScholarMatch</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Login - ScholarLens</title>
+    <!-- Bootstrap 5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style-modern.css">
 </head>
 <body>
-    <nav class="navbar">
+    <!-- Modern Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-modern sticky-top">
         <div class="container">
-            <div class="nav-brand">
-                <h1><a href="index.html">🎓 ScholarMatch</a></h1>
+            <a class="navbar-brand brand-logo" href="index.html">
+                <i class="fas fa-graduation-cap"></i> ScholarLens
+            </a>
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="scholarships.html">Scholarships</a></li>
+                    <li class="nav-item"><a class="nav-link" href="programs.html">Programs</a></li>
+                    <li class="nav-item"><a class="btn btn-gradient ms-2" href="register.html">Register</a></li>
+                </ul>
             </div>
-            <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="register.html">Register</a></li>
-            </ul>
         </div>
     </nav>
 
-    <section class="auth-section">
-        <div class="auth-container">
-            <div class="auth-card">
-                <h2>Welcome Back!</h2>
-                <p class="auth-subtitle">Login to access your personalized dashboard</p>
-                
-                <form id="login-form">
-                    <div class="form-group">
-                        <label for="email">Email Address</label>
-                        <input type="email" id="email" name="email" required>
+    <!-- Modern Login Section -->
+    <section class="py-5" style="min-height: 100vh; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); display: flex; align-items: center;">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-10 col-xl-9">
+                    <div class="card shadow-lg border-0" style="border-radius: 20px; overflow: hidden;">
+                        <div class="row g-0">
+                            <!-- Left Side - Welcome Illustration -->
+                            <div class="col-lg-6 d-none d-lg-flex" style="background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%); padding: 3rem; flex-direction: column; justify-content: center; align-items: center; color: white; position: relative;">
+                                <div class="text-center">
+                                    <div class="mb-4" style="font-size: 5rem;">
+                                        <i class="fas fa-graduation-cap" style="opacity: 0.9;"></i>
+                                    </div>
+                                    <h2 class="text-white mb-3" style="font-weight: 700; font-size: 2rem;">Welcome Back!</h2>
+                                    <p class="text-white-50 mb-4" style="font-size: 1.1rem; max-width: 350px;">Access your personalized scholarship and program recommendations</p>
+                                    
+                                    <div class="mt-5 text-start" style="max-width: 350px;">
+                                        <div class="d-flex align-items-start mb-4">
+                                            <div class="me-3" style="font-size: 2rem; opacity: 0.8;">
+                                                <i class="fas fa-rocket"></i>
+                                            </div>
+                                            <div>
+                                                <h5 class="mb-1 text-white">Track Applications</h5>
+                                                <p class="mb-0 text-white-50 small">Monitor your scholarship application status</p>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex align-items-start mb-4">
+                                            <div class="me-3" style="font-size: 2rem; opacity: 0.8;">
+                                                <i class="fas fa-chart-line"></i>
+                                            </div>
+                                            <div>
+                                                <h5 class="mb-1 text-white">Smart Matching</h5>
+                                                <p class="mb-0 text-white-50 small">Get opportunities tailored to your profile</p>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex align-items-start">
+                                            <div class="me-3" style="font-size: 2rem; opacity: 0.8;">
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                            <div>
+                                                <h5 class="mb-1 text-white">Save Favorites</h5>
+                                                <p class="mb-0 text-white-50 small">Bookmark scholarships for later review</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Right Side - Login Form -->
+                            <div class="col-lg-6">
+                                <div class="p-4 p-lg-5" style="min-height: 100%;">
+                                    <div class="text-center mb-4">
+                                        <div class="mb-3 d-lg-none">
+                                            <i class="fas fa-graduation-cap" style="font-size: 3rem; background: var(--gradient-modern); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"></i>
+                                        </div>
+                                        <h3 class="mb-2" style="font-weight: 700; color: #1a1a1a;">Login to Your Account</h3>
+                                        <p class="text-muted">Enter your credentials to continue</p>
+                                    </div>
+
+                                    <form id="login-form">
+                                        <div class="mb-4">
+                                            <label for="email" class="form-label fw-semibold" style="color: #333;">Email Address</label>
+                                            <div class="input-group input-group-lg">
+                                                <span class="input-group-text bg-light border-end-0">
+                                                    <i class="fas fa-envelope text-primary"></i>
+                                                </span>
+                                                <input type="email" class="form-control border-start-0 ps-0" id="email" name="email" placeholder="Enter your email" required style="font-size: 1rem;">
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-4">
+                                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                                <label for="password" class="form-label fw-semibold mb-0" style="color: #333;">Password</label>
+                                                <a href="#" class="text-decoration-none small" style="color: var(--primary);">Forgot password?</a>
+                                            </div>
+                                            <div class="input-group input-group-lg">
+                                                <span class="input-group-text bg-light border-end-0">
+                                                    <i class="fas fa-lock text-primary"></i>
+                                                </span>
+                                                <input type="password" class="form-control border-start-0 ps-0" id="password" name="password" placeholder="Enter your password" required style="font-size: 1rem;">
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-4">
+                                            <label for="role" class="form-label fw-semibold" style="color: #333;">Login As</label>
+                                            <div class="input-group input-group-lg">
+                                                <span class="input-group-text bg-light border-end-0">
+                                                    <i class="fas fa-user-tag text-primary"></i>
+                                                </span>
+                                                <select class="form-select border-start-0 ps-0" id="role" name="role" required style="font-size: 1rem;">
+                                                    <option value="student">Student</option>
+                                                    <option value="admin">Admin</option>
+                                                </select>
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-3">
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" id="rememberMe">
+                                                <label class="form-check-label text-muted" for="rememberMe">
+                                                    Remember me for 30 days
+                                                </label>
+                                            </div>
+                                        </div>
+
+                                        <div id="error-message" class="alert alert-danger d-none mb-3"></div>
+                                        <div id="success-message" class="alert alert-success d-none mb-3"></div>
+
+                                        <button type="submit" class="btn btn-gradient w-100 py-3 mb-4" style="font-weight: 600; font-size: 1.1rem;">
+                                            <i class="fas fa-sign-in-alt me-2"></i>Login to Dashboard
+                                        </button>
+
+                                        <div class="text-center">
+                                            <p class="mb-0 text-muted">
+                                                Don't have an account? 
+                                                <a href="register.html" class="text-decoration-none fw-semibold" style="color: var(--primary);">Create one now</a>
+                                            </p>
+                                        </div>
+
+                                        <div class="mt-4 pt-4 border-top">
+                                            <p class="text-center text-muted small mb-2">Quick Access (Demo):</p>
+                                            <div class="d-flex gap-2 justify-content-center flex-wrap">
+                                                <button type="button" class="btn btn-sm btn-outline-secondary" onclick="document.getElementById('email').value='admin@college.edu'; document.getElementById('password').value='admin123'; document.getElementById('role').value='admin';">
+                                                    <i class="fas fa-user-shield me-1"></i>Admin
+                                                </button>
+                                                <button type="button" class="btn btn-sm btn-outline-secondary" onclick="document.getElementById('email').value='priya@student.edu'; document.getElementById('password').value='student123'; document.getElementById('role').value='student';">
+                                                    <i class="fas fa-user-graduate me-1"></i>Student
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" id="password" name="password" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="role">Login As</label>
-                        <select id="role" name="role" required>
-                            <option value="student">Student</option>
-                            <option value="admin">Admin</option>
-                        </select>
-                    </div>
-
-                    <div id="error-message" class="error-message" style="display: none;"></div>
-                    <div id="success-message" class="success-message" style="display: none;"></div>
-
-                    <button type="submit" class="btn btn-primary btn-block">Login</button>
-                </form>
-
-                <p class="auth-footer">
-                    Don't have an account? <a href="register.html">Register here</a>
-                </p>
+                </div>
             </div>
         </div>
     </section>
 
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/auth.js"></script>
 </body>
 </html>
