--- a/public/student-dashboard.html
+++ b/public/student-dashboard.html
@@ -3,22 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Dashboard - ScholarMatch</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Student Dashboard - ScholarLens</title>
+    <!-- Bootstrap 5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style-modern.css">
 </head>
 <body>
-    <nav class="navbar">
+    <!-- Modern Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-modern sticky-top">
         <div class="container">
-            <div class="nav-brand">
-                <h1>🎓 ScholarMatch</h1>
+            <a class="navbar-brand brand-logo" href="student-dashboard.html">
+                <i class="fas fa-graduation-cap"></i> ScholarLens
+            </a>
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#all-opportunities"><i class="fas fa-list me-1"></i>All</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#my-matches"><i class="fas fa-bullseye me-1"></i>My Matches</a></li>
+                    <li class="nav-item"><span class="nav-link" id="student-name"><i class="fas fa-user me-1"></i>Student</span></li>
+                    <li class="nav-item"><button class="btn btn-gradient btn-sm ms-2" onclick="logout()"><i class="fas fa-sign-out-alt me-1"></i>Logout</button></li>
+                </ul>
             </div>
-            <ul class="nav-menu">
-                <li><a href="#all-opportunities">All Opportunities</a></li>
-                <li><a href="#my-matches">My Matches</a></li>
-                <li><a href="#profile">Profile</a></li>
-                <li><span id="student-name"></span></li>
-                <li><button class="btn btn-primary" onclick="logout()">Logout</button></li>
-            </ul>
         </div>
     </nav>
 
@@ -110,7 +121,7 @@
         </button>
         <div id="chatbot-container" class="chatbot-container" style="display: none;">
             <div class="chatbot-header">
-                <h4>ScholarMatch Assistant</h4>
+                <h4>ScholarLens Assistant</h4>
                 <button id="chatbot-close">×</button>
             </div>
             <div id="chatbot-messages" class="chatbot-messages">
@@ -124,8 +135,8 @@
             </div>
         </div>
     </div>
-
-    <script src="js/auth.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>    <script src="js/auth.js"></script>
     <script src="js/student.js"></script>
     <script src="js/chatbot.js"></script>
 </body>
